# practica_1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_mapping.py  pyproject.toml  reporte_mensual_202511.xlsx
dags/: etl_trafico.py
data/: mapping_municipios.csv
utils/: main.py
